package inf112.skeleton.app.network;

import inf112.skeleton.app.game.objects.Card;

import java.util.List;

public class cardList {

    public List<Card> cardList;
}
