@startuml

title __NETWORK's Class Diagram__\n

  namespace inf112.skeleton.app {
    namespace network {
      class inf112.skeleton.app.network.CardList {
          + cardList : List<Card>
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace network {
      abstract class inf112.skeleton.app.network.Network {
          + avatars : List<PlayerAvatar>
          + isHost : Boolean
          + messagesRecived : List<Message>
          + name : String
          + readyToInitialize : boolean
          {static} + choseRole()
          {abstract} + close()
          {abstract} + initConnections()
          {abstract} + initialize()
          {static} + prompt()
          # registerClasses()
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace network {
      class inf112.skeleton.app.network.NetworkClient {
          + client : Client
          + close()
          + connectToServer()
          + giveNickname()
          + initConnections()
          + initialize()
          + sendAvatar()
          + sendMessage()
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace network {
      class inf112.skeleton.app.network.NetworkData {
          {static} + classesToRegister()
      }
    }
  }
  

  namespace inf112.skeleton.app {
    namespace network {
      class inf112.skeleton.app.network.NetworkHost {
          + alivePlayers : List<Integer>
          + clientsRegistered : int
          + connections : Connection[]
          {static} + hostID : int
          + playerCards : HashMap<Integer, List<Card>>
          - server : Server
          + close()
          + finalizeConnections()
          + initConnections()
          + initialize()
          + promptCardDraw()
          + requestNames()
          + sendAvatars()
          + sendIDs()
          + sendMapLayerWrapper()
          + sendMessageToAll()
          + sendReadySignal()
          + sendWinner()
          + updateConnections()
          - registerClient()
      }
    }
  }
  

  inf112.skeleton.app.network.Network o-- inf112.skeleton.app.game.objects.PlayerToken : winner
  inf112.skeleton.app.network.NetworkClient -up-|> inf112.skeleton.app.network.Network
  inf112.skeleton.app.network.NetworkClient o-- inf112.skeleton.app.game.GameClient : gameClient
  inf112.skeleton.app.network.NetworkClient o-- inf112.skeleton.app.libgdx.Map : map
  inf112.skeleton.app.network.NetworkHost -up-|> inf112.skeleton.app.network.Network
  inf112.skeleton.app.network.NetworkHost o-- inf112.skeleton.app.game.GameHost : host


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
